# MathToCpp

./: .gitignore  CMakeLists.txt  Documentation.md  README.md  main.cpp
LinearAlgebra/: CMakeLists.txt
LinearAlgebra/include/: SquareMatrix.h
LinearAlgebra/src/: SquareMatrix.cpp
LinearAlgebra/src/implementations/: SquareMatrix.tpp
MachineLearningFunctions/: CMakeLists.txt
MachineLearningFunctions/include/: LossFunctions.h
MachineLearningFunctions/src/: LossFunctions.cpp
MachineLearningFunctions/src/implementations/: LossFunctions.tpp
MathFunctions/: OptionFunctions.h  test.cpp
Test/: CMakeLists.txt
Test/LinearAlgebra/: TestLinearAlgebra.h
